--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,27 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@mipmap/lifter_emoji" android:id="@+id/lifterImage"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="169dp" android:layout_marginEnd="170dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="273dp" app:layout_constraintBottom_toTopOf="@+id/clickCounter"
-            android:contentDescription="TODO"/>
+            android:layout_width="202dp"
+            android:layout_height="210dp" app:srcCompat="@mipmap/lifter_emoji" android:id="@+id/lifterImage"
+            android:contentDescription="TODO"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="85dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="261dp"/>
+    <ImageView
+            android:layout_width="291dp"
+            android:layout_height="311dp" app:srcCompat="@mipmap/speech_bubble_foreground"
+            android:id="@+id/speechBubble"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="65dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
             android:text="@string/welcome_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/clickCounter"
-            app:drawableTint="#DD0E0E" app:layout_constraintTop_toBottomOf="@+id/lifterImage"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="132dp"
-            android:layout_marginEnd="133dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="347dp"/>
+            android:layout_width="126dp"
+            android:layout_height="84dp" android:id="@+id/greetingMessage"
+            app:drawableTint="#DD0E0E"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="211dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="175dp"
+            android:textSize="23sp" android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/lifterImage"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
