--- a/app/src/main/res/layout/workout_printer.xml
+++ b/app/src/main/res/layout/workout_printer.xml
@@ -6,47 +6,49 @@
 
     <ImageView
             android:layout_width="150dp"
-            android:layout_height="150dp" app:srcCompat="@drawable/lifter_emoji" android:id="@+id/imageView"
+            android:layout_height="150dp" app:srcCompat="@drawable/lifter_emoji" android:id="@+id/lifterImagePrinter"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="130dp" android:layout_marginEnd="130dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="581dp"/>
+            android:layout_marginBottom="581dp" android:contentDescription="TODO"/>
     <ScrollView
             android:layout_width="289dp"
             android:layout_height="578dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="1dp"
             android:layout_marginEnd="1dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="1dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" android:id="@+id/scrollView2">
+            app:layout_constraintTop_toBottomOf="@+id/lifterImagePrinter" android:id="@+id/exerciseTextScrollView"
+            app:layout_constraintStart_toEndOf="@+id/exercisePicScrollView">
         <LinearLayout android:layout_width="match_parent" android:layout_height="50sp"
                       android:orientation="vertical">
             <TextView
                     android:text="@string/firstExerciseText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" android:id="@+id/firstExercise"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="@string/exerciseBoxHeight" android:id="@+id/firstExercise"
+                    app:drawableTint="#E60505"/>
             <TextView
                     android:text="@string/secondExerciseText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/secondExercise"/>
+                    android:layout_height="@string/exerciseBoxHeight" android:id="@+id/secondExercise"/>
             <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/thirdExercise"
+                    android:layout_height="@string/exerciseBoxHeight" android:id="@+id/thirdExercise"
                     android:text="@string/thirdExerciseText"/>
             <TextView
                     android:text="@string/fourthExerciseText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/fourthExercise"/>
+                    android:layout_height="@string/exerciseBoxHeight" android:id="@+id/fourthExercise"/>
             <TextView
                     android:text="@string/fifthExerciseText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/fifthExercise"/>
+                    android:layout_height="@string/exerciseBoxHeight" android:id="@+id/fifthExercise"/>
             <TextView
                     android:text="@string/sixthExerciseText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/sixthExercise"/>
+                    android:layout_height="@string/exerciseBoxHeight" android:id="@+id/sixthExercise"/>
             <TextView
                     android:text="@string/seventhExerciseText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/seventhExercise"/>
+                    android:layout_height="@string/exerciseBoxHeight" android:id="@+id/seventhExercise"/>
         </LinearLayout>
     </ScrollView>
     <ScrollView
@@ -54,38 +56,39 @@
             android:layout_height="578dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="1dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="1dp"
-            app:layout_constraintEnd_toStartOf="@+id/scrollView2" android:layout_marginEnd="1dp"
-            tools:ignore="SpeakableTextPresentCheck">
+            app:layout_constraintEnd_toStartOf="@+id/exerciseTextScrollView" android:layout_marginEnd="1dp"
+            tools:ignore="SpeakableTextPresentCheck" android:id="@+id/exercisePicScrollView">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                       android:orientation="vertical">
             <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
-                    android:id="@+id/firstExerciseGif"/>
+                    android:layout_height="@string/exerciseBoxHeight" app:srcCompat="@mipmap/ic_launcher"
+                    android:id="@+id/firstExerciseGif" tools:ignore="ImageContrastCheck"/>
             <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
-                    android:id="@+id/secondExerciseGif"/>
+                    android:layout_height="@string/exerciseBoxHeight" app:srcCompat="@mipmap/ic_launcher"
+                    android:id="@+id/secondExerciseGif" tools:ignore="ImageContrastCheck"/>
             <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
-                    android:id="@+id/thirdExerciseGif"/>
+                    android:layout_height="@string/exerciseBoxHeight" app:srcCompat="@mipmap/ic_launcher"
+                    android:id="@+id/thirdExerciseGif" tools:ignore="ImageContrastCheck"/>
             <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
-                    android:id="@+id/fourthExerciseGif"/>
+                    android:layout_height="@string/exerciseBoxHeight" app:srcCompat="@mipmap/ic_launcher"
+                    android:id="@+id/fourthExerciseGif" tools:ignore="ImageContrastCheck"/>
             <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
-                    android:id="@+id/fifthExerciseGif"/>
+                    android:layout_height="@string/exerciseBoxHeight" app:srcCompat="@mipmap/ic_launcher"
+                    android:id="@+id/fifthExerciseGif" tools:ignore="ImageContrastCheck"/>
             <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
-                    android:id="@+id/sixthExerciseGif"/>
+                    android:layout_height="@string/exerciseBoxHeight" app:srcCompat="@mipmap/ic_launcher"
+                    android:id="@+id/sixthExerciseGif" android:contentDescription="TODO"
+                    tools:ignore="ImageContrastCheck"/>
             <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
-                    android:id="@+id/seventhExerciseGif"/>
+                    android:layout_height="@string/exerciseBoxHeight" app:srcCompat="@mipmap/ic_launcher"
+                    android:id="@+id/seventhExerciseGif" tools:ignore="ImageContrastCheck"/>
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
