--- a/app/src/main/res/layout/workout_printer.xml
+++ b/app/src/main/res/layout/workout_printer.xml
@@ -11,20 +11,18 @@
             android:layout_marginStart="130dp" android:layout_marginEnd="130dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="581dp" android:contentDescription="TODO"/>
-    <ScrollView
+    <ScrollView android:layout_height="@string/scrollViewHeight"
             android:layout_width="289dp"
-            android:layout_height="578dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="1dp"
             android:layout_marginEnd="1dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="1dp"
             app:layout_constraintTop_toBottomOf="@+id/lifterImagePrinter" android:id="@+id/exerciseTextScrollView"
             app:layout_constraintStart_toEndOf="@+id/exercisePicScrollView">
-        <LinearLayout android:layout_width="match_parent" android:layout_height="50sp"
+        <LinearLayout android:layout_width="match_parent" android:layout_height="@string/scrollViewHeight"
                       android:orientation="vertical">
             <TextView
                     android:text="@string/firstExerciseText"
                     android:layout_width="match_parent"
-                    android:layout_height="@string/exerciseBoxHeight" android:id="@+id/firstExercise"
-                    app:drawableTint="#E60505"/>
+                    android:layout_height="@string/exerciseBoxHeight" android:id="@+id/firstExercise"/>
             <TextView
                     android:text="@string/secondExerciseText"
                     android:layout_width="match_parent"
@@ -52,13 +50,13 @@
         </LinearLayout>
     </ScrollView>
     <ScrollView
+            android:layout_height="@string/scrollViewHeight"
             android:layout_width="120dp"
-            android:layout_height="578dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="1dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="1dp"
             app:layout_constraintEnd_toStartOf="@+id/exerciseTextScrollView" android:layout_marginEnd="1dp"
             tools:ignore="SpeakableTextPresentCheck" android:id="@+id/exercisePicScrollView">
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+        <LinearLayout android:layout_width="match_parent" android:layout_height="@string/scrollViewHeight"
                       android:orientation="vertical">
             <ImageView
                     android:layout_width="match_parent"
